# Scorch

./: .gitignore  CMakeLists.txt  bootstrap.py
JAAM/: CMakeLists.txt
JAAM/converter/: CMakeLists.txt
JAAM/converter/src/: main.cpp  modelConverter.cpp  modelConverter.h  util.cpp  util.h
JAAM/lib/: CMakeLists.txt
JAAM/lib/include/: assetFile.h  assetMaterial.h  assetMesh.h  assetModel.h  assetTexture.h  jaam.h
JAAM/lib/src/: assetFile.cpp  assetMaterial.cpp  assetMesh.cpp  assetModel.cpp  assetTexture.cpp
assetlib/: CMakeLists.txt
assetlib/include/: asset.h
cmake/: commonmacros.txt
engine/: CMakeLists.txt
engine/include/: engine.h
engine/include/core/: app.h  layer.h  log.h  pipeline.h  renderer.h  shader.h  shaderModule.h  utils.h
engine/include/event/: ApplicationEvent.h  Event.h  MouseEvent.h  ValueChangedEvent.h
engine/include/render/: pipeline.h
engine/include/scorch/: engine.h  pch.h
engine/include/scorch/core/: app.h  flags.h  input.h  layer.h  log.h  sceneGraph.h
engine/include/scorch/d12/: d12Renderer.h
engine/include/scorch/event/: keyEvent.h
engine/include/scorch/render/: buffer.h  camera.h  commandbuffer.h  descriptorSet.h  gui.h  materialSystem.h  mesh.h  pipeline.h  renderer.h  renderpass.h  scene.h  shaderModule.h  texture.h
engine/include/scorch/vk/: vulkanBuffer.h  vulkanCommandbuffer.h  vulkanDescriptorSet.h  vulkanInitialiser.h  vulkanPipeline.h  vulkanRenderer.h  vulkanRenderpass.h  vulkanTexture.h  vulkanUtils.h
engine/include/vk/: vulkanInitialiser.h  vulkanPipeline.h  vulkanRenderer.h  vulkanUtils.h
engine/src/: pch.h
engine/src/core/: app.cpp  input.cpp  layer.cpp  log.cpp  pipeline.cpp  renderer.cpp  sceneGraph.cpp  shader.cpp  shaderModule.cpp  utils.cpp
engine/src/d12/: d12Renderer.cpp
engine/src/render/: buffer.cpp  camera.cpp  commandbuffer.cpp  descriptorSet.cpp  gui.cpp  materialSystem.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  renderpass.cpp  scene.cpp  shaderModule.cpp  texture.cpp
engine/src/vk/: vulkanBuffer.cpp  vulkanCommandbuffer.cpp  vulkanDescriptorSet.cpp  vulkanInitialiser.cpp  vulkanPipeline.cpp  vulkanRenderer.cpp  vulkanRenderpass.cpp  vulkanTexture.cpp  vulkanUtils.cpp
sandbox/: CMakeLists.txt
sandbox/data/shaders/: coloured_triangle_colour_normal.frag  diffuse.frag  diffuse.vert  fullscreen.frag  normalMesh.vert  textured.frag  textured.vert
sandbox/shaders/: descriptorMesh.vert  lit.frag  normalMesh.vert  triangle.frag
sandbox/src/: MaterialLayer.cpp  MaterialLayer.h  deferredLayer.cpp  deferredLayer.h  descriptorLayer.cpp  descriptorLayer.h  main.cpp  modelLayer.cpp  modelLayer.h  offscreenLayer.cpp  offscreenLayer.h  sceneLayer.cpp  sceneLayer.h  testLayer.cpp  testLayer.h  vertexBufferLayer.cpp  vertexBufferLayer.h
